--- a/MyWardrobeAppClient/app_client/index.html
+++ b/MyWardrobeAppClient/app_client/index.html
@@ -12,6 +12,7 @@
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://accounts.google.com/gsi/client" async></script>
 </head>
 
 <body>
